# python-project-83

./: .env.example  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page_analyzer_ci.yml
page_analyzer/: app.py  parse.py  repository.py  validate.py
page_analyzer/templates/: base.html  header.html  index.html  url.html  urls.html
